--- a/index.html
+++ b/index.html
@@ -419,6 +419,84 @@
         </div>
 
     </div>
+    <div class="languageheader">
+        <h2>Flask</h2>
+        <div class="contentcontainer">
+            <h6 class="contentheader">Introduction</h6>
+            <a href="https://github.com/learn-co-curriculum/python-p4-web-servers-and-wsgi" class="content">Web Servers and WSGI</a>
+            <a href="https://github.com/learn-co-curriculum/python-p4-flask-application-structure" class="content">Building Flask Applications</a>
+            <a href="https://github.com/learn-co-curriculum/python-p4-routing-and-views-lab" class="content">Flask Routing and Views Lab</a>
+            <a href="https://github.com/learn-co-curriculum/python-p4-request-response-cycle" class="content">The Request-Response Cycle</a>
+            <h6 class="contentheader">Intro to Flask SQLAlchemy</h6>
+            <a href="https://github.com/learn-co-curriculum/python-p4-v2-flask-sqlalchemy-1-intro" class="content">Flask-SQLAlchemy : Code-Along</a>
+            <a href="https://github.com/learn-co-curriculum/python-p4-v2-flask-sqlalchemy-crud-shell" class="content">Flask-SQLAlchemy CRUD (Flask Shell): Code-Along (CodeGrade)</a>
+            <a href="https://github.com/learn-co-curriculum/python-p4-v2-flask-sqlalchemy-migration" class="content">Database Migration : Code-Along</a>
+            <a href="https://github.com/learn-co-curriculum/python-p4-v2-flask-sqlalchemy-seed" class="content">Seeding a Database : Code-Along</a>
+            <a href="https://github.com/learn-co-curriculum/python-p4-v2-flask-sqlalchemy-application" class="content">Querying a Database in a Flask Application : Code-Along</a>
+            <a href="https://github.com/learn-co-curriculum/python-p4-v2-flask-sqlalchemy-json-response" class="content">Returning a JSON response : Code-Along</a>
+            <a href="https://github.com/learn-co-curriculum/python-p4-v2-serialization" class="content">Serialization : Code-Along</a>
+            <a href="https://github.com/learn-co-curriculum/python-p4-v2-flask-sqlalchemy-lab-2" class="content">Flask-SQLAlchemy Lab 2</a>
+            <h6 class="contentheader">Web Scraping</h6>
+            <a href="https://github.com/learn-co-curriculum/python-p4-webscraping-beautiful-soup" class="content">Scraping HTML with Beautiful Soup</a>
+            <a href="https://github.com/learn-co-curriculum/python-p4-scraping-code-along" class="content">Object Oriented Scraping</a>
+            <a href="https://github.com/learn-co-curriculum/python-scraping-kickstarter" class="content">Scraping Kickstarter</a>
+            <h6 class="contentheader">Retrieving data from an API</h6>
+            <a href="https://github.com/learn-co-curriculum/python-p4-intro-to-remote-data" class="content">Introduction to Getting Remote Data</a>
+            <a href="https://github.com/learn-co-curriculum/python-p4-sending-get-requests" class="content">Sending GET Requests</a>
+            <a href="https://github.com/learn-co-curriculum/python-p4-working-with-apis" class="content">Working with APIs (Deprecated)</a>
+            <a href="https://github.com/learn-co-curriculum/phase-4v2-python" class="content">Working with APIs (Updated)</a>
+            <a href="https://github.com/learn-co-curriculum/python-getting-remote-data-lab" class="content">Getting Remote Data Lab</a>
+            <a href="https://youtu.be/2Uga5Dmj-dA" class="content">Testing APIs with Postman</a>
+            <h6 class="contentheader">Building APIs</h6>
+            <a href="https://github.com/learn-co-curriculum/python-p4-intro-to-building-apis" class="content">Intro to Building APIs</a>
+            <a href="https://github.com/learn-co-curriculum/python-p4-v2-building-get-api" class="content">Building a GET API : Code-Along</a>
+            <a href="https://github.com/learn-co-curriculum/python-p4-building-get-api-lab" class="content">Building a GET API Lab</a>
+            <a href="https://github.com/learn-co-curriculum/python-p4-building-post-patch-delete-api" class="content">Building a POST/PATCH/DELETE API </a>
+            <a href="https://github.com/learn-co-curriculum/python-p4-building-post-patch-delete-api-lab" class="content">Building a POST/PATCH/DELETE API Lab </a>
+            <a href="https://github.com/learn-co-curriculum/python-p4-chatterbox-lab" class="content">Chatterbox Lab (CodeGrade)</a>
+            <a href="https://github.com/learn-co-curriculum/python-phase-4-code-challenge-pizza" class="content">Phase 4 Code Challenge: Pizza Restaurants (Updated) (CodeGrade)
+            </a>
+            <h6 class="contentheader">REST APIs</h6>
+            <a href="https://github.com/learn-co-curriculum/python-p4-intro-to-rest" class="content">Intro to REST</a>
+            <a href="https://github.com/learn-co-curriculum/python-p4-flask-restful-cr" class="content">Create and Retrieve with Flask-RESTful</a>
+            <a href="https://github.com/learn-co-curriculum/python-p4-flask-restful-cr-lab" class="content">REST Create and Retrieve Lab</a>
+            <a href="https://github.com/learn-co-curriculum/python-p4-rest-error-handling" class="content">Error Handling In RESTful APIs</a>
+            <a href="https://github.com/learn-co-curriculum/python-p4-flask-restful-ud" class="content">Update and Delete with Flask-RESTful</a>
+            <a href="https://github.com/learn-co-curriculum/python-p4-flask-restful-crud-lab" class="content">REST CRUD Lab (CodeGrade)</a>
+            <a href="https://github.com/learn-co-curriculum/python-p4-rest-philosophy" class="content">REST Philosophy</a>
+            <a href="https://github.com/learn-co-curriculum/python-p4-hateoas-and-marshmallow" class="content">HATEOAS and Marshmallow</a>
+            <h6 class="contentheader">Constraints and Validations</h6>
+            <a href="https://github.com/learn-co-curriculum/python-p4-constraints-and-validations-intro" class="content">Intro to Constraints and Validations
+            </a>
+            <a href="https://github.com/learn-co-curriculum/python-p4-validation-constraints" class="content">SQLAlchemy Constraints</a>
+            <a href="https://github.com/learn-co-curriculum/python-p4-validation-flask-sqlalchemy-validations" class="content">Flask-SQLAlchemy Validations</a>
+            <a href="https://github.com/learn-co-curriculum/python-p4-validation-flask-sqlalchemy-validations-lab" class="content">Flask-SQLAlchemy Validations Lab (CodeGrade)</a>
+            <h6 class="contentheader">Full Stack Development</h6>
+            <a href="https://github.com/learn-co-curriculum/python-p4-intro-to-full-stack-development" class="content">Intro to Full-Stack Development</a>
+            <a href="https://github.com/learn-co-curriculum/python-p4-adding-react-to-flask" class="content">Adding React to Flask</a>
+            <a href="https://github.com/learn-co-curriculum/python-p4-adding-react-to-flask-pt-2" class="content">Adding React to Flask Part 2</a>
+            <a href="https://github.com/learn-co-curriculum/python-formik-validation" class="content">Formik and Form Validation</a>
+            <a href="https://github.com/learn-co-curriculum/python-p4-tcp-http-and-websocket" class="content">Mini Lesson: TCP | HTTP | Websocket</a>
+            <a href="https://github.com/learn-co-curriculum/python-p4-conclusion-to-full-stack-development" class="content">Conclusion to Full-Stack Development</a>
+            <h6 class="contentheader">Idenitity and Access Management</h6>
+            <a href="https://github.com/learn-co-curriculum/python-p4-intro-to-iam" class="content">Intro to Identity and Access Management</a>
+            <a href="https://github.com/learn-co-curriculum/python-p4-login-sessions-cookies" class="content">Cookies and Sessions</a>
+            <a href="https://github.com/learn-co-curriculum/python-p4-cookies-in-flask-api" class="content">Cookies in APIs</a>
+            <a href="https://github.com/learn-co-curriculum/python-p4-cookies-and-sessions-lab" class="content">Cookies and Sessions Lab</a>
+            <a href="https://github.com/learn-co-curriculum/python-p4-authenticating-users" class="content">Authenticating Users</a>
+            <a href="https://github.com/learn-co-curriculum/python-p4-authenticating-users-lab" class="content">Authenticating Users Lab</a>
+            <a href="https://github.com/learn-co-curriculum/python-p4-authorization" class="content">Authorizing Requests</a>
+            <a href="https://github.com/learn-co-curriculum/python-p4-authorization-lab" class="content">Authorizing Requests Lab</a>
+            <a href="https://github.com/learn-co-curriculum/python-p4-passwords" class="content">Password Protection</a>
+            <a href="https://github.com/learn-co-curriculum/python-p4-passwords-lab" class="content">Password Protection Lab</a>
+            <a href="https://github.com/learn-co-curriculum/python-p4-iam-putting-it-all-together-lab" class="content">Putting it All Together: IAM Lab</a>
+            <h6 class="contentheader">Doployment</h6>
+            <a href="https://github.com/learn-co-curriculum/python-p4-intro-to-deployment" class="content">Intro to Deployment</a>
+            <a href="https://github.com/learn-co-curriculum/python-p4-deploying-flask-api-to-render" class="content">Deploying a Flask API to Render</a>
+            <a href="https://github.com/learn-co-curriculum/python-p4-using-databases-with-render" class="content">Using Databases with Render</a>
+            <a href="https://github.com/learn-co-curriculum/python-p4-deploying-flask-react-app-to-render" class="content">Deploying a Flask-React App to Render</a>
+        </div>
+    </div>
     
 </body>
 </html>
