--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
     <div class="languageheader">
         <h2 class="head">Javascript</h2>
-        <div class="contentContainer">
+        <div class="contentcontainer">
             <a href="https://github.com/learn-co-curriculum/phase-1-review-strings-lab" class="content">Strings Lab</a>
             <a href="https://github.com/learn-co-curriculum/phase-0-pac-1-comparisons-in-javascript" class="content">Comparisons in JavaScript</a>
             <a href="https://github.com/learn-co-curriculum/phase-1-review-conditionals" class="content">Conditionals</a></div>
