finish the moringa notes

--- a/index.html
+++ b/index.html
@@ -11,6 +11,24 @@
         <h1 class="title">Links to Python,Javascript,React,flask and Git</h1>
     </header>
     <div class="languageheader">
+        <h2 class="head">Environment Setup</h2>
+        <div class="contentcontainer">
+            <h6 class="contentheader">MacOs Environment Setup</h6>
+            <a href="https://github.com/learn-co-curriculum/phase-0-macos-env-introduction" class="content">Introduction to MacOS Environment Setup</a>
+            <a href="https://github.com/learn-co-curriculum/phase-0-macos-env-system" class="content">MacOS System Setup</a>
+            <a href="https://github.com/learn-co-curriculum/phase-0-macos-env-nodejs" class="content">Mac NodeJS Install</a>
+            <a href="https://github.com/learn-co-curriculum/multiphase-macos-env-python" class="content">Installing Python on MacOS</a>
+            <a href="https://github.com/learn-co-curriculum/phase-0-macos-env-git-github" class="content">Mac Git And Github Configuration</a>
+            <a href="https://github.com/learn-co-curriculum/multiphase-macos-env-verification" class="content">Verify and Troubleshoot your MacOS Environment Setup</a>
+            <h6 class="contentheader">Windows Environment Setup</h6>
+            <a href="https://github.com/learn-co-curriculum/phase-0-wsl2-env-windows-subsystem-linux" class="content">Setting Up WSL2</a>
+            <a href="https://github.com/learn-co-curriculum/phase-0-wsl2-env-nodejs" class="content">Installing Node.js on WSL2</a>
+            <a href="https://github.com/learn-co-curriculum/multiphase-wsl-env-python" class="content">Windows WSL2 Python Installation</a>
+            <a href="https://github.com/learn-co-curriculum/phase-0-wsl2-env-git-github" class="content">Configuring Git and GitHub on WSL2</a>
+            <a href="https://github.com/learn-co-curriculum/multiphase-wsl2-env-verification" class="content">Verify and Troubleshoot your WSL2 Environment Setup</a>
+        </div>
+    </div>
+    <div class="languageheader">
         <h2 class="head">Javascript</h2>
         <div class="contentcontainer">
             <a href="https://github.com/learn-co-curriculum/phase-1-review-strings-lab" class="content">Strings Lab</a>
@@ -26,12 +44,12 @@
             <a href="https://github.com/learn-co-curriculum/phase-1-callback-functions" class="content">Callback Functions</a>
             <a href="https://github.com/learn-co-curriculum/phase-1-first-class-functions" class="content">First-Class Functions</a>
             <a href="https://github.com/learn-co-curriculum/phase-1-first-class-functions-lab" class="content">JavaScript Advanced Functions: First-Class Functions Lab</a>
-            <h6 class="contentheaders">SCOPE</h6>
+            <h6 class="contentheader">SCOPE</h6>
             <a href="https://github.com/learn-co-curriculum/phase-1-scope-readme" class="content">Introduction to Scope</a>
             <a href="https://github.com/learn-co-curriculum/phase-1-scope-chain-readme" class="content">Scope Chain</a>
             <a href="https://github.com/learn-co-curriculum/phase-1-scope-lab" class="content">Scope Lab</a>
             <a href="https://github.com/learn-co-curriculum/phase-1-lexical-scoping-readme" class="content">Lexical scoping</a>
-            <h6 class="contentheaders">Data Structures</h6>
+            <h6 class="contentheader">Data Structures</h6>
             <a href="https://github.com/learn-co-curriculum/phase-0-intro-to-js-2-arrays" class="content">Arrays</a>
             <a href="https://github.com/learn-co-curriculum/phase-0-intro-to-js-2-array-methods" class="content">Array Methods</a>
             <a href="https://github.com/learn-co-curriculum/phase-0-intro-to-js-2-array-lab" class="content"> Arrays Lab</a>
@@ -41,7 +59,7 @@
             <a href="https://github.com/learn-co-curriculum/phase-0-intro-to-js-2-object-iteration" class="content">Object Iteration</a>
             <a href="https://github.com/learn-co-curriculum/phase-0-intro-to-js-2-traversing-nested-objects" class="content">Traversing Nested Objects</a>
             <a href="https://github.com/learn-co-curriculum/phase-1-object-ball" class="content">JavaScript Object-ball</a>
-            <h6 class="contentheaders">Video summary</h6>
+            <h6 class="contentheader">Video summary</h6>
             <a href="https://github.com/learn-co-curriculum/phase-1-lecture-videos-first-class-functions" class="content">Video: First Class Functions</a>
             <a href="https://github.com/learn-co-curriculum/phase-1-lecture-videos-first-class-functions-part-2" class="content">First Class Functions Part 2</a>
             <a href="https://github.com/learn-co-curriculum/phase-1-lecture-videos-map" class="content">Video: .map</a>
@@ -49,7 +67,7 @@
             <a href="https://github.com/learn-co-curriculum/phase-1-lecture-videos-filter" class="content">Video: .find</a>
             <a href="https://github.com/learn-co-curriculum/phase-1-lecture-videos-reduce" class="content">Video: .reduce</a>
             <a href="https://github.com/learn-co-curriculum/phase-1-lecture-videos-foreach" class="content">Video: .forEach</a>
-            <h6 class="contentheaders">Array Iteration</h6>
+            <h6 class="contentheader">Array Iteration</h6>
             <a href="https://github.com/learn-co-curriculum/phase-1-array-iterator-methods" class="content">Array Iterator Methods</a>
             <a href="https://github.com/learn-co-curriculum/phase-1-array-element-finding" class="content">Finding Array Elements</a>
             <a href="https://github.com/learn-co-curriculum/phase-1-array-find-method-lab" class="content">Using the Array Find Method</a>
@@ -65,7 +83,7 @@
             <a href="https://github.com/learn-co-curriculum/phase-1-destructuring-assignment" class="content"> Destructuring Assignment</a>
             <a href="https://github.com/learn-co-curriculum/phase-1-advanced-function-parameter-syntax-default-rest-spread" class="content">Advanced Function Parameter Syntax: Default / Rest / Spread
             </a>
-            <h6 class="contentheaders">JavaScript and the DOM</h6>
+            <h6 class="contentheader">JavaScript and the DOM</h6>
             <a href="https://github.com/learn-co-curriculum/phase-1-lecture-videos-intro-to-dom" class="content">Video: Intro to DOM</a>
             <a href="https://github.com/learn-co-curriculum/phase-0-the-dom-editing-lab" class="content">DOM Editing Lab</a>
             <a href="https://github.com/learn-co-curriculum/phase-0-the-dom-dev-tools" class="content">Changing The DOM with DevTools and JavaScript</a>
@@ -75,7 +93,7 @@
             </a>
             <a href="https://github.com/learn-co-curriculum/phase-1-lecture-videos-changing-dom-elements" class="content">Video: Changing DOM Elements</a>
             <a href="https://github.com/learn-co-curriculum/phase-0-the-dom-modifying-elements-lab" class="content">Creating and Inserting DOM Nodes Lab</a>
-            <h6 class="contentheaders">JavaScript Events</h6>
+            <h6 class="contentheader">JavaScript Events</h6>
             <a href="https://github.com/learn-co-curriculum/phase-1-lecture-videos-dom-events" class="content">Video: DOM Events</a>
             <a href="https://github.com/learn-co-curriculum/phase-0-javascript-events" class="content">JavaScript Events</a>
             <a href="https://github.com/learn-co-curriculum/phase-0-javascript-events-event-listening-lab" class="content">JavaScript Event Listeners Lab</a>
@@ -172,7 +190,7 @@
         </div>
     </div>
     <div class="languageheader">
-        <h2>React</h2>
+        <h2 class="head">React</h2>
         <div class="contentcontainer">
             <h6 class="contentheader">Intro</h6>
             <a href="https://github.com/learn-co-curriculum/react-hooks-what-is-react" class="content">What is React?</a>
@@ -286,9 +304,8 @@
         </div>
     </div>
     <div class="languageheader">
-        <h2>Python</h2>
+        <h2 class="head">Python</h2>
         <div class="contentcontainer">
-
             <h6 class="contentheader">Python fundamentals</h6>
             <a href="https://github.com/learn-co-curriculum/phase-3-intro-to-python" class="content">Intro to Python</a>
             <a href="https://github.com/learn-co-curriculum/python-p3-running-python-code" class="content">Running Python Code</a>
@@ -420,7 +437,7 @@
 
     </div>
     <div class="languageheader">
-        <h2>Flask</h2>
+        <h2 class="head">Flask</h2>
         <div class="contentcontainer">
             <h6 class="contentheader">Introduction</h6>
             <a href="https://github.com/learn-co-curriculum/python-p4-web-servers-and-wsgi" class="content">Web Servers and WSGI</a>
