--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             <a href="https://github.com/learn-co-curriculum/react-hooks-jsx" class="content">Writing JSX</a>
             <a href="https://github.com/learn-co-curriculum/react-hooks-jsx-lab" class="content">JSX Lab</a>
             <a href="https://github.com/learn-co-curriculum/react-hooks-lecture-videos-conditional-rendering" class="content">Video: Conditional Rendering</a>
-            <h6 class="contenheader">Props</h6>
+            <h6 class="contentheader">Props</h6>
             <a href="https://github.com/learn-co-curriculum/react-hooks-props-basics" class="content">Props Basics</a>
             <a href="https://github.com/learn-co-curriculum/react-hooks-props-basics-lab" class="content">Props Basics Lab</a>
             <a href="https://github.com/learn-co-curriculum/react-hooks-lecture-videos-destructuring" class="content">Video: Destructuring</a>
@@ -328,7 +328,7 @@
             <a href="https://github.com/learn-co-curriculum/python-p3-dictionaries" class="content">Dictionaries</a>
             <a href="https://github.com/learn-co-curriculum/phase-3-sets" class="content">Sets</a>
             <a href="https://github.com/learn-co-curriculum/phase-3-data-structures-lab" class="content">Data Structures Lab</a>
-            <h6 class="contenheader">Object Orientation in Python</h6>
+            <h6 class="contentheader">Object Orientation in Python</h6>
             <a href="https://github.com/learn-co-curriculum/python-p3-intro-to-object-oriented-programming" class="content">Intro to Object-Oriented Programming</a>
             <a href="https://github.com/learn-co-curriculum/python-p3-defining-object-oriented-programming" class="content">Defining Object-Oriented Programming</a>
             <a href="https://github.com/learn-co-curriculum/python-p3-classes-and-instances" class="content">Classes and Instances</a>
